# aoc25

./: README.md  aoc25.opam  dune-project
days/: days.ml  dune
days/day01/: day01.ml  dune
days/day02/: day02.ml  dune
days/day03/: day03.ml  dune
days/day04/: day04.ml  dune
days/day05/: day05.ml  dune
days/day06/: day06.ml  dune
days/day07/: day07.ml  dune
days/day08/: day08.ml  dune
days/day09/: day09.ml  dune
days/day10/: day10.ml  dune
lib/: aoc25.ml  days.ml  dune
test/: dune  test_aoc25.ml  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day06.ml  test_day07.ml  test_day08.ml  test_day09.ml
